# ChangeLog for media-sound/rhythmbox
# Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.66 2006/02/17 17:30:55 josejx Exp $

  17 Feb 2006; Joseph Jezak <josejx@gentoo.org> rhythmbox-0.9.3.1.ebuild:
  Marked ~ppc for bug #113875.

*rhythmbox-0.9.3.1_p1 (06 Feb 2006)

  06 Feb 2006; Joe McCann <joem@gentoo.org> rhythmbox-0.9.3.1.ebuild,
  +rhythmbox-0.9.3.1_p1.ebuild:
  Adding _p1 version to suport gstreamer-0.10 since it is still hardmasked and
  I don't want to upset repoman or anybody else

*rhythmbox-0.9.3.1 (06 Feb 2006)

  06 Feb 2006; Joe McCann <joem@gentoo.org> +rhythmbox-0.9.3.1.ebuild:
  New release with plenty of bugfixes,new features, and gstreamer-0.10 support

  04 Jan 2006; Joe McCann <joem@gentoo.org>
  +files/rhythmbox-0.9.2-dbus-0.60.patch, rhythmbox-0.9.2.ebuild:
  add dbus-0.60 patch, remove blocker

  02 Jan 2006; Saleem Abdulrasool <compnerd@gentoo.org>
  rhythmbox-0.9.2.ebuild:
  Adding blocker for 0.60 as Cardoe is unmasking

  06 Dec 2005; Zaheer Abbas Merali <zaheerm@gentoo.org>
  rhythmbox-0.8.8-r1.ebuild, rhythmbox-0.9.2.ebuild:
  Fix GStreamer dependencies

  29 Nov 2005; Gustavo Zacarias <gustavoz@gentoo.org>
  rhythmbox-0.9.2.ebuild:
  Keyworded ~sparc wrt #113875

  29 Nov 2005; Joe McCann <joem@gentoo.org> rhythmbox-0.9.2.ebuild:
  Change pda useflag to ipod since it now brings in new deps such as hal which
  don't work well on some archs. This makes it easier for archs to use.mask
  this feature. Suggested by gustavoz.

*rhythmbox-0.9.2 (29 Nov 2005)

  29 Nov 2005; Joe McCann <joem@gentoo.org> +rhythmbox-0.9.2.ebuild:
  New version, lots of features. Added local useflags for avahi, daap,
  musicbrainz, and tagwriting. Thanks to everybody in bug #102022.

  26 Sep 2005; <dang@gentoo.org> +files/rhythmbox-0.8.8-empty-xlib.patch,
  rhythmbox-0.8.8-r1.ebuild:
  Fix empty xlibs. Bug #91707
