@@ -1,14 +1,52 @@
-MD5 288c6f5111dc8634e1b4c5822dcbe1f4 ChangeLog 8152
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
+MD5 541c10eaa549fab365a15204c06af59f ChangeLog 8286
+RMD160 a06af4dd247dfaed9a23ffb28616422b37a1f81e ChangeLog 8286
+SHA256 eecc913543d48b5c5b07bb7f2574e3da21df2f8429fd2ec2ebeb0990a4b056de ChangeLog 8286
 MD5 44a42f72ca8c0f3136fded12f1aa7172 files/digest-rhythmbox-0.8.8-r1 69
+RMD160 990badbc4f189bd890ce4e4ebbea99917de7a121 files/digest-rhythmbox-0.8.8-r1 69
+SHA256 aaf41e966028c1d21185ea950161be8b8916189a77f7147fbdaeba26b8ebb30f files/digest-rhythmbox-0.8.8-r1 69
 MD5 518953859231ab23eec13b7d8a004fdc files/digest-rhythmbox-0.9.2 69
+RMD160 b353417444bbaeea681bbb93b3d82b4122160a45 files/digest-rhythmbox-0.9.2 69
+SHA256 6cde84dc37c9cc276463036c9c30c7b7dee7b6ed1dbb7a7aab0c9cefe10b7cfc files/digest-rhythmbox-0.9.2 69
 MD5 f1335da386c60b0cf4f0c5c67fa9743c files/digest-rhythmbox-0.9.3.1 71
+RMD160 0809c53b4b0db677c96f425e775a977c00093d96 files/digest-rhythmbox-0.9.3.1 71
+SHA256 8dc25fd528fe6f957533779502e6da111ef4d3f2a4b1f7b42319f17452f8273b files/digest-rhythmbox-0.9.3.1 71
 MD5 f1335da386c60b0cf4f0c5c67fa9743c files/digest-rhythmbox-0.9.3.1_p1 71
+RMD160 0809c53b4b0db677c96f425e775a977c00093d96 files/digest-rhythmbox-0.9.3.1_p1 71
+SHA256 8dc25fd528fe6f957533779502e6da111ef4d3f2a4b1f7b42319f17452f8273b files/digest-rhythmbox-0.9.3.1_p1 71
 MD5 7c49ce1b3d4a78dc9adba805fd3b82fb files/rhythmbox-0.8.7-gst_shn_support.patch 665
+RMD160 8f8eec7bf19405ea70b7ab5984c5d5a96e834822 files/rhythmbox-0.8.7-gst_shn_support.patch 665
+SHA256 1c4fbabdff94741c88fb92f37c84ae70e05be9054481241efcab49f8c2c19018 files/rhythmbox-0.8.7-gst_shn_support.patch 665
 MD5 a3ff016aec5eec7277e2598ad013b80a files/rhythmbox-0.8.8-empty-xlib.patch 496
+RMD160 63855112d054d8db5446578aa5e995a8725c4fee files/rhythmbox-0.8.8-empty-xlib.patch 496
+SHA256 33ab12bdddc62f86763930d330daa5c6af1f78737efaf9fac7dd3d36ccf06468 files/rhythmbox-0.8.8-empty-xlib.patch 496
 MD5 9f5bc9bf255b78cc67342f9fc9423ef6 files/rhythmbox-0.8.8-ipod.patch 809
+RMD160 b8e4aefa12411772259132b7b6ed226caf426e6d files/rhythmbox-0.8.8-ipod.patch 809
+SHA256 9c78341ae8039f6e25f6321512b2e45651aad266b40a6a0e44d641385b1ff230 files/rhythmbox-0.8.8-ipod.patch 809
 MD5 ff8e0703a12aeaa2724bd8b9299556d2 files/rhythmbox-0.9.2-dbus-0.60.patch 342
+RMD160 24504e20a982d069b1bc0e61af2ab59ea6c8cd47 files/rhythmbox-0.9.2-dbus-0.60.patch 342
+SHA256 7d33b3e2ba176d835cd0802a9c33b5500cf892a40ae003f544b671f54f66a64b files/rhythmbox-0.9.2-dbus-0.60.patch 342
 MD5 e854b7f54a4de6256186cbdcaabbc1ec metadata.xml 200
+RMD160 bca17f66c909b846452eb76b2d2c9a2eec429db0 metadata.xml 200
+SHA256 2e1eafdbf68047687a24f6a4ad8d519ec193805e347bf17d1d00f7771353e39b metadata.xml 200
 MD5 afaf09dad8a37b524662268bea3b9fb7 rhythmbox-0.8.8-r1.ebuild 2625
+RMD160 b0e9d8b8c992afc8f94712275b00e34a76429948 rhythmbox-0.8.8-r1.ebuild 2625
+SHA256 d214012105fc9f8488aca1fff4615d2af705dc7825cc3600bae9b155e4ef652b rhythmbox-0.8.8-r1.ebuild 2625
 MD5 8e689da700e4bcafd4ab70182d9f3ade rhythmbox-0.9.2.ebuild 2492
-MD5 4702b82f52173179182e29dd95bfb1ff rhythmbox-0.9.3.1.ebuild 2512
-MD5 fe57f10f1ab0780d304305843a987e1a rhythmbox-0.9.3.1_p1.ebuild 3427
+RMD160 1bd96e0322c9e1ccc81eb3c0babb5eb670cee834 rhythmbox-0.9.2.ebuild 2492
+SHA256 2ff89ede57bc3c02e236ade9582e53412864ef91d043bbdb5908b264fe5d0e43 rhythmbox-0.9.2.ebuild 2492
+MD5 1941fefcc298b60002976441a2e00da9 rhythmbox-0.9.3.1.ebuild 2521
+RMD160 bb21bf182f85c9d9ca2036d514b41f8971bf0308 rhythmbox-0.9.3.1.ebuild 2521
+SHA256 4cfc913b2847ea4d7b1e17f909f74e96273af17674e70ec22bd6d4cb2f962b69 rhythmbox-0.9.3.1.ebuild 2521
+MD5 787455b455d56374d797cd42e3a7c16f rhythmbox-0.9.3.1_p1.ebuild 3438
+RMD160 83b3df037c8e590f61dbd20146cd18770d4bc162 rhythmbox-0.9.3.1_p1.ebuild 3438
+SHA256 07a8c7c23a306d7062f4829b55512468999a42b18dad0942a9fb7f770da73249 rhythmbox-0.9.3.1_p1.ebuild 3438
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.2.1 (GNU/Linux)
+
+iD8DBQFEDwf+wUpWvClEHQoRAukmAJ9YzJvUNIwLZqdWtkl63gV50MtnzgCdEaxs
+bwqyULoR+lUMjF1U75AM48I=
+=i8BL
+-----END PGP SIGNATURE-----
