@@ -1,6 +1,10 @@
 # ChangeLog for media-sound/rhythmbox
 # Copyright 2000-2006 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.66 2006/02/17 17:30:55 josejx Exp $
+# $Header: /usr/local/ssd/gentoo-x86/output/media-sound/cvs-repo/gentoo-x86/media-sound/rhythmbox/ChangeLog,v 1.67 2006/03/08 16:37:00 metalgod Exp $
+
+  08 Mar 2006; Luis Medinas <metalgod@gentoo.org> rhythmbox-0.9.3.1.ebuild,
+  rhythmbox-0.9.3.1_p1.ebuild:
+  Added ~amd64 keyword.
 
   17 Feb 2006; Joseph Jezak <josejx@gentoo.org> rhythmbox-0.9.3.1.ebuild:
   Marked ~ppc for bug #113875.
